# pysortexif

./: .coveragerc  .travis.yaml  .travis.yml  Pipfile  README.md  pyproject.toml  setup.py
pysortexif/: __init__.py  main.py  pysortexif.py
src/: Pipfile  main.py
tests/: test_all.py
