[project]
name = "pysortexif"
version = "0.3.0"
authors = [{ name = "Ruggero Turra", email = "giurrero@gmail.com" }]
description = "Simple package to move photographs to folders, depending on exif timestamp"
readme = "README.md"
urls = { "Homepage" = "https://github.com/wiso/pysortexif" }
requires-python = ">=3.10"
dependencies = ["exifread>=3.3.1", "pyexiftool>=0.5.6"]
keywords = ["exif", "photography", "sort", "timestamp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
pysortexif = "pysortexif.pysortexif:main"

[tool.hatch.build.targets.sdist]
include = [
    "README.md"
]

[tool.hatch.build.targets.wheel]
include = [
    "README.md"
]